# llm-speed-bench

./: .gitignore  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  benchmark.auto.example.json  benchmark.example.json  pyproject.toml  setup.py
.github/workflows/: publish-legacy-shim.yml  release.yml  testpypi.yml  tests.yml
docs/: ci.md  cli-reference.md  config-reference.md  configuration.md  custom-tests.md  getting-started.md  interactive.md  migrating-to-llm-preflight.md  model-watch.md  result-schema.md  tests-pricing-safety.md  troubleshooting.md  workflows.md
examples/: cross-provider-run.json  flagship-comparison.json
examples/custom-contracts/: content-rule.json  intent-routing.json  ticket-extraction.json
legacy-pypi-shim/: LICENSE  README.md  pyproject.toml
llm_bench/: __init__.py  capability_ledger.py  catalog.py  catalog_probe.py  catalog_watch.py  cli.py  client.py  features.py  metrics.py  profiles.py  redaction.py  runner.py  security.py
llm_preflight/: __init__.py  __main__.py  capability_ledger.py  catalog.py  catalog_probe.py  catalog_watch.py  cli.py  client.py  env.py  features.py  metrics.py  presets.py  pricing.py  profiles.py  runner.py  security.py
tests/: test_capability_ledger.py  test_catalog.py  test_catalog_probe.py  test_catalog_watch.py  test_cli.py  test_clients.py  test_env.py  test_features.py  test_metrics.py  test_package.py  test_pricing.py  test_profiles.py  test_redaction.py  test_runner.py
