[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-preflight"
version = "2.1.0"
description = "Local, cross-provider preflight checks for an LLM model switch"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["llm", "preflight", "model-switch", "validation", "openai", "anthropic", "gemini"]
dependencies = []

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Benchmark",
]

[project.optional-dependencies]
dev = ["coverage>=7", "pytest>=7", "ruff>=0.15"]
audit = ["bandit>=1.9", "detect-secrets>=1.5", "mypy>=1.19"]
release = ["build>=1.2", "twine>=6"]

[project.scripts]
llm-preflight = "llm_preflight.__main__:main"

[tool.setuptools.packages.find]
include = ["llm_preflight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = ["llm_preflight"]

[tool.coverage.report]
fail_under = 80
show_missing = true
